# tree-sitter-lustre

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-lustre.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_lustre/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterLustre/: lustre.h
bindings/swift/TreeSitterLustreTests/: TreeSitterLustreTests.swift
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: comment.txt  const_decl.txt  expression_terminal.txt  include.txt  node.txt  pragma.txt  type.txt
